--- a/vs/dosbox.vcxproj
+++ b/vs/dosbox.vcxproj
@@ -436,7 +436,9 @@
     <ClCompile Include="..\src\hardware\ps1audio.cpp" />
     <ClCompile Include="..\src\hardware\sblaster.cpp" />
     <ClCompile Include="..\src\hardware\serialport\directserial.cpp" />
+    <ClCompile Include="..\src\hardware\serialport\fifo.cpp" />
     <ClCompile Include="..\src\hardware\serialport\libserial.cpp" />
+    <ClCompile Include="..\src\hardware\serialport\fifo.cpp" />
     <ClCompile Include="..\src\hardware\serialport\misc_util.cpp" />
     <ClCompile Include="..\src\hardware\serialport\nullmodem.cpp" />
     <ClCompile Include="..\src\hardware\serialport\serialdummy.cpp" />
@@ -648,7 +650,9 @@
     <ClInclude Include="..\src\hardware\mame\saa1099.h" />
     <ClInclude Include="..\src\hardware\mame\sn76496.h" />
     <ClInclude Include="..\src\hardware\serialport\directserial.h" />
+    <ClInclude Include="..\src\hardware\serialport\fifo.h" />
     <ClInclude Include="..\src\hardware\serialport\libserial.h" />
+    <ClInclude Include="..\src\hardware\serialport\fifo.h" />
     <ClInclude Include="..\src\hardware\serialport\misc_util.h" />
     <ClInclude Include="..\src\hardware\serialport\nullmodem.h" />
     <ClInclude Include="..\src\hardware\serialport\serialdummy.h" />
