--- a/vs/dosbox.vcxproj.filters
+++ b/vs/dosbox.vcxproj.filters
@@ -214,6 +214,9 @@
     <ClCompile Include="..\src\hardware\serialport\directserial.cpp">
       <Filter>src\hardware\serialport</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\hardware\serialport\fifo.cpp">
+      <Filter>src\hardware\serialport</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\hardware\serialport\libserial.cpp">
       <Filter>src\hardware\serialport</Filter>
     </ClCompile>
@@ -1000,6 +1003,9 @@
       <Filter>src\hardware\mame</Filter>
     </ClInclude>
     <ClInclude Include="..\src\hardware\serialport\directserial.h">
+      <Filter>src\hardware\serialport</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\hardware\serialport\fifo.h">
       <Filter>src\hardware\serialport</Filter>
     </ClInclude>
     <ClInclude Include="..\src\hardware\serialport\libserial.h">
