--- a/src/misc/meson.build
+++ b/src/misc/meson.build
@@ -13,7 +13,7 @@ libmisc_sources = [
 
 libmisc = static_library('misc', libmisc_sources,
                          include_directories : incdir,
-                         dependencies : sdl2_dep)
+                         dependencies : [sdl2_dep, spdlog_dep])
 
 libmisc_dep = declare_dependency(link_with : libmisc)
 
