--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           rm -R c:\vcpkg
           mv c:\vcpkg-bak c:\vcpkg
-          vcpkg install --triplet ${{ matrix.conf.arch }}-windows libpng sdl2 sdl2-net libmt32emu opusfile fluidsynth gtest
+          vcpkg install --triplet ${{ matrix.conf.arch }}-windows libpng sdl2 sdl2-net libmt32emu opusfile fluidsynth gtest gettext
           if (-not $?) { throw "vcpkg failed to install library dependencies" }
           rm -R c:\vcpkg\buildtrees\fluidsynth\src\*.clean\sf2
 
@@ -165,7 +165,7 @@ jobs:
           cp README                               dest/doc/manual.txt
           cp vs/$RELEASE_DIR/libfluidsynth-3.dll  dest/
           cp vs/$RELEASE_DIR/glib-2.0-0.dll       dest/ # fluidsynth dependency
-          cp vs/$RELEASE_DIR/intl-8.dll           dest/ # glib dependency
+          cp vs/$RELEASE_DIR/intl-8.dll           dest/ # glib and gettext dependency
           cp vs/$RELEASE_DIR/pcre.dll             dest/ # glib dependency
           cp vs/$RELEASE_DIR/iconv-2.dll          dest/ # glib dependency
           cp vs/$RELEASE_DIR/mt32emu-2.dll        dest/
