--- a/tests/meson.build
+++ b/tests/meson.build
@@ -27,8 +27,8 @@ endif
 # - example  - has a failing testcase (on purpose)
 # - fs_utils - depends on files in: tests/files/
 #
-example = executable('example', ['example_tests.cpp', 'stubs.cpp'],
-                     dependencies : [gtest_dep, sdl2_dep, libmisc_dep],
+example = executable('example', 'example_tests.cpp',
+                     dependencies : [gtest_dep, sdl2_dep, libmisc_dep, spdlog_dep],
                      include_directories : incdir)
 test('gtest example', example, 
      should_fail : true)
@@ -43,11 +43,11 @@ test('gtest fs_utils', fs_utils,
 # other unit tests
 #
 unit_tests = [
-  {'name' : 'rwqueue',      'deps' : [libmisc_dep]},
-  {'name' : 'soft_limiter', 'deps' : [atomic_dep, sdl2_dep, libmisc_dep]},
-  {'name' : 'string_utils', 'deps' : []},
-  {'name' : 'setup',        'deps' : [sdl2_dep, libmisc_dep]},
-  {'name' : 'support',      'deps' : [sdl2_dep, libmisc_dep]},
+  {'name' : 'rwqueue',      'deps' : [libmisc_dep, spdlog_dep]},
+  {'name' : 'soft_limiter', 'deps' : [atomic_dep, sdl2_dep, libmisc_dep, spdlog_dep]},
+  {'name' : 'string_utils', 'deps' : [spdlog_dep]},
+  {'name' : 'setup',        'deps' : [sdl2_dep, libmisc_dep, spdlog_dep]},
+  {'name' : 'support',      'deps' : [sdl2_dep, libmisc_dep, spdlog_dep]},
 ]
 
 foreach ut : unit_tests
