Use git submodule for spdlog

--- a/src/dos/meson.build
+++ b/src/dos/meson.build
@@ -28,7 +28,7 @@ libdos_sources = files([
 
 libdos = static_library('dos', libdos_sources,
                         include_directories : incdir,
-                        dependencies : [sdl2_dep, libdecoders_dep, spdlog_dep])
+                        dependencies : [sdl2_dep, libdecoders_dep])
 
 libdos_dep = declare_dependency(link_with : libdos)
 
