--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/spdlog"]
 	path = submodules/spdlog
-	url = https://github.com/gabime/spdlog
+	url = https://github.com/dosbox-staging/spdlog
