--- a/.github/workflows/pvs-studio.yml
+++ b/.github/workflows/pvs-studio.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Fetch submodules
+        run:  git submodule update --init --recursive
+
       - run:  sudo apt-get update
 
       - name: Log and setup environment
