Disable LTO for macOS release builds

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -234,7 +234,7 @@ jobs:
             -Ddefault_library=static \
             -Db_asneeded=true \
             -Doptimization=s \
-            -Db_lto=true \
+            -Db_lto=false \
             -Dtry_static_libs=opusfile,png,sdl2,sdl2_net \
             -Dfluidsynth:enable-floats=true \
             -Dfluidsynth:try-static-deps=true \
