Quick and dirty (and possibly broken) attempt at High-DPI

--- a/contrib/macos/Info.plist.template
+++ b/contrib/macos/Info.plist.template
@@ -38,6 +38,9 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 
+	<key>NSHighResolutionCapable</key>
+	<string>YES</string>
+
 	<key>CGDisableCoalescedUpdates</key>
 	<true/>
 
