--- a/tests/vs/tests.vcxproj
+++ b/tests/vs/tests.vcxproj
@@ -245,6 +245,7 @@ $(TargetPath)</Command>
     <ClCompile Include="..\ansi_code_markup_tests.cpp" />
     <ClCompile Include="..\bitops_tests.cpp" />
     <ClCompile Include="..\bit_view_tests.cpp" />
+    <ClCompile Include="..\fifo_tests.cpp" />
     <ClCompile Include="..\fs_utils_tests.cpp" />
     <ClCompile Include="..\iohandler_containers_tests.cpp" />
     <ClCompile Include="..\rwqueue_tests.cpp" />
