--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -202,7 +202,7 @@ jobs:
         if:   matrix.runner.needs_deps
         run: >-
           arch -arch=${{ matrix.runner.arch }} brew install librsvg tree
-          ccache libpng meson opusfile sdl2 sdl2_net speexdsp
+          ccache freetype libpng meson opusfile sdl2 sdl2_net speexdsp
 
       # Workaround frequent HTTPS-based connectivity issues
       # https://gitlab.freedesktop.org/freedesktop/freedesktop/-/issues/407
